add new product and new price form
